sidebar horizontal scroll fixed

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -525,7 +525,7 @@ csmall2 {
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: 200px;
     margin: 0;
     padding: 0;
     list-style: none;
